- delete output sample files - add .out files to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
+# Mac file management file
 *.DS_Store
+
+# Eclipse setting files
 .classpath
 .project
 .settings
+
+# auto-generated files and output files
 target/
-web-app/dataset/
 target-eclipse/
 *.log
+*.out
+
+# dataset files
+web-app/dataset/
